Latex hell appears to be fixed...

--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -21,7 +21,7 @@
 }
 
 @TechReport{onssurvey,
-    title = {Internet access – households and individuals},
+    title = {Internet access - households and individuals},
     year = {2016},
     author = {{Office For National Statistics}},
     URL = {http://www.ons.gov.uk/peoplepopulationandcommunity/householdcharacteristics/homeinternetandsocialmediausage/bulletins/internetaccesshouseholdsandindividuals/2016}
@@ -294,5 +294,5 @@ Year = {1998},
     author       = "Hammer Hill",
     year={2016},
     title        = "Existential Import",
-    howpublished = "http://cstl-cla.semo.edu/hhill/pl120/notes/existential%20import.htm"
+    howpublished = "http://cstl-cla.semo.edu/hhill/pl120/notes/existential\%20import.htm"
 }
